package org.example;

import java.util.ArrayList;

public class Hero {
    public ArrayList<String> getSkills() {
        return skills;
    }
    private ArrayList<String> skills;
}