package org.example;

import java.io.IOException;

public class Main {
    public static void main(String[] args) throws IOException {
        Characters characters = new Characters();
        characters.startGame();
        characters.characters();
    }
}